fixed overflow

--- a/vue/styles.css
+++ b/vue/styles.css
@@ -13,7 +13,7 @@ body {
     font-weight: 400;
     line-height: 1.5;
     background-color: #F7FBFC;
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
     /* height: auto; */
 }
 
